# medulla

./: .deepsource.toml  .editorconfig  .env.example  .gitignore  .pep8speaks.yml  .pyup.yml  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  COPYRIGHT.txt  ChangeLog  ChangeLog_fr  Changelog  Doxyfile  INSTALL  LICENCE.txt  Makefile  Makefile.am  Makefile.i18n  README  README.fr.md  README.md  README.rst  autogen.sh  build_sdist.sh  bump.sh  clean.sh  common.mk  configure.ac  mastering.sql  patch.patch  phplint.sh  pyflakes.sh  pyproject.toml  securitywcvescan.db  setup.py
agent/: Changelog  Makefile  Makefile.am  common.mk  setup.py
agent/backup-tools/: Makefile  Makefile.am  backup.sh  cdlist  cdlist.c
agent/conf/: Makefile.am
agent/contrib/: Makefile.am
agent/debian/: changelog  control  control.in  copyright  init.d  lmc-agent.default  lmc-agent.dirs  lmc-agent.install  lmc-agent.postrm  mmc-agent.default  mmc-agent.dirs  mmc-agent.install  mmc-agent.postinst  mmc-agent.postrm  python-lmc-base.install  python-lmc-base.postinst  python-lmc-base.preinst  python-lmc-mail.install  python-lmc-mail.preinst  python-lmc-mail.prerm  python-lmc-network.install  python-lmc-network.postrm  python-lmc-ox.install  python-lmc-plugins-tools.install  python-lmc-proxy.install  python-lmc-proxy.postinst  python-lmc-samba.install  python-mmc-base.install  python-mmc-base.postinst  python-mmc-base.preinst  python-mmc-mail.install  python-mmc-mail.postrm  python-mmc-mail.preinst  python-mmc-network.install  python-mmc-network.prerm  python-mmc-plugins-tools.install  python-mmc-proxy.install  python-mmc-samba.install  python-mmc-samba.postinst  rules
agent/init/: Makefile.am  mmc-agent.in  mmc-agent.service
agent/init.d/: Makefile.am  lmc-agent  mmc-agent  mmc-agent.in
agent/lmc/: agent.py  proxy.py
agent/man/: Makefile.am  mmc-add-schema.1  mmc-agent.1  mmc-helper.1  mmc-stats.1
agent/mmc/: Makefile.am  __init__.py  agent.py  client.py  site.py.in  ssl.py  utils.py
agent/openldap-check-password/: Makefile  Makefile.am  mmc-check-password.c  mmc-check-password.conf  mmc-password-helper
agent/scripts/: babel.ini  build_pot.sh  extractor.py
agent/tests/: basetest.ini  mmc-password-helper-test.py  sambatest.ini  testldap.py  testmail.py  testproxy.py  testsamba.py  vdomaintest.ini
doc/: Makefile  Makefile.am  README.rst  doc.mk  docbook-xhtml.xsl  mandrify  mmc-database-backend.env  param.html.xsl
doc/man/: Makefile.am  medulla-inventory-clean-database.1  medulla-package-server-register-imaging.1  medulla-scheduler-manager.1  pulse2-imaging-server.1  pulse2-inventory-clean-database.1  pulse2-inventory-server.1  pulse2-launcher.1  pulse2-launchers-manager.1  pulse2-msc-clean-database.1  pulse2-output-wrapper.1  pulse2-package-server-register-imaging.1  pulse2-package-server.1  pulse2-ping.1  pulse2-scheduler-manager.1  pulse2-scheduler.1  pulse2-tcp-sproxy.1  pulse2-wol.1
doc/user/: Makefile.am  Medulla-User-Manual-EN.odt  Pulse2-User-Manual-EN.odt  Pulse2-User-Manual-FR.odt
services/: COPYING  Changelog  INSTALL.imaging-server  Makefile  Makefile.am  README.tftp-server  setup.py
services/clients/: HEADER.html  Makefile.am  agents.conf  async_.py  create-repos.sh  generate-agent-pack.sh  generate-agents  id_rsa.pub  installer.sh.in  style.css  win32.mk.in
services/conf/: Makefile.am
services/contrib/: Makefile.am  OcsNGMap.xml  Ocsinventory_local.pl  glpi-110.sql  glpi-92.sql  glpi-93.sql  glpi-94.sql  glpi-95.sql  health2csv.py  pulse2_stats.py  test-xmlrpc.examples  test-xmlrpc.php  test-xmlrpc.py
services/imaging-server/: INSTALL  README.tftp-server  README.tree
services/init.d/: Makefile.am  medulla-cm.in  medulla-imaging-server.in  medulla-inventory-server.in  medulla-package-server.in  medulla-register-pxe.in  medulla-scheduler.in  pulse2-cm.in  pulse2-cm.service.in  pulse2-imaging-server  pulse2-imaging-server.in  pulse2-imaging-server.service.in  pulse2-inventory-server  pulse2-inventory-server.in  pulse2-inventory-server.service  pulse2-inventory-server.service.in  pulse2-inventoryserver  pulse2-launchers  pulse2-launchers.in  pulse2-launchers.service.in  pulse2-package-server  pulse2-package-server.in  pulse2-package-server.service  pulse2-package-server.service.in  pulse2-register-pxe.in  pulse2-register-pxe.service  pulse2-register-pxe.service.in  pulse2-scheduler  pulse2-scheduler.in  pulse2-scheduler.service.in
services/medulla/: Makefile.am  __init__.py  cache.py  consts.py  health.py  network.py  time_intervals.py  version.py.in  xmlrpc.py
services/mmc/: Makefile.am  authproviders.ini
services/pulse2/: Makefile.am  __init__.py  cache.py  consts.py  ddl.py  health.py  network.py  site.py.in  time_intervals.py  timeplage.py  utils.py  version.py.in  xmlrpc.py
services/src/: Makefile  Makefile.am  iniparser.h  pulse2-imaging-server.c  pulse2-imaging-server.h  site.h  site.h.in
services/systemd/: Makefile.am  medulla-package-server.service  medulla-register-pxe.service  medulla-scheduler.service  medullalogws.service  mmc-agent.service  pulse2-cm.service  pulse2-imaging-server.service  pulse2-inventory-server.service  pulse2-launchers.service  pulse2-package-server.service  pulse2-register-pxe.service  pulse2-scheduler.service
web/: Changelog  FILELIST  Makefile  Makefile.am  bootmenu.php  common.mk  demobanner.php  forgotpassword.php  index.php  license.php  logs_iframe.php  main.php  main_content.php  providers.php  site.php.in  token.php  version.php
web/confs/: Makefile.am  lmc.ini  mmc.ini  mmc.ini.in
web/debian/: apache.conf  changelog  conffiles  control  control.in  copyright  lmc-web-base.postinst  lmc-web-base.postrm  mmc-web-base.postinst  mmc-web-base.postrm  rules
web/gen-doc/: create.sh  doxygen-lmc.conf  doxygen-mmc.conf
web/graph/: bootstrap-alerts.css  bootstrap-buttons.css  bootstrap-forms.css  dynamicCss.php  footer.inc.php  global.css  header.inc.php  master.css  navbar.inc.php  navbartools.inc.php  null  popups.css  progressbar.css  sidebar.inc.php
web/imaging/: autoload.php  bootmenu.php  bootmenu2.php  phpunit.xml
(+7025 files in other folders)
